# basket_service

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2024_07_30_2304-cb067d2d3bd9_create_table_basket.py  2024_07_31_1758-b3ecd63cbad8_create_tables.py  2024_07_31_1852-0d5327f24454_create_tables.py  2024_08_07_2351-b50a8ba348bb_init.py  2024_08_15_1520-0483b8f634ca_поля_о_обработчике_ордера.py  2024_08_19_2354-bccd92c19b7c_выбор_статуса_ордера.py  2024_08_20_0155-a5b878d1bb5f_ini.py  2024_08_20_0212-69bc286dbb0f_type_field.py  2024_10_10_0002-f163463b2b4a_init.py  2024_10_10_0326-3eba272e96ba_add_checkout_stage.py  2024_10_14_0320-d9ec6265225c_add_user_id_in_order.py
api_v1/: __init__.py
api_v1/basket_api/: depends.py  views.py
api_v1/order_api/: depends.py  views.py
api_v1/payment_api/: view.py
basket_app/: bascket_repository.py  bascket_service.py  models.py  schemas.py
core/: __init__.py  base_UOW.py  base_model.py  base_repository.py  base_utils.py  db_manager.py  settings.py
order_app/: api_bank.py  models.py  order_repository.py  order_service.py  schemas.py
