[tool.poetry]
name = "basket-service"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
black = "^24.4.2"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pytz = "^2024.1"
requests = "^2.32.3"
tzdata = "^2024.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
fastapi-pagination = "^0.12.26"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
